# capsule_pose_estimation

./: .gitignore  README.md
config/: capsules.yaml  medium_board.yaml  params.yaml
ros2/: CMakeLists.txt  package.xml
ros2/include/: camera_detection.hpp  lidar_refinement.hpp  target_config.hpp  target_detection.hpp
ros2/launch/: capsule_pose_estimation.py
ros2/src/: camera_detection.cpp  lidar_refinement.cpp  target_detection.cpp
